tdf#94234 Add Period as chart data label separator

Change-Id: I50b9662b22bdb10086e6aa557622566591135514
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88139
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>